--- a/application/admin/view/login/login.html
+++ b/application/admin/view/login/login.html
@@ -25,30 +25,30 @@
 
     <form class="form-signin" action="{:url('admin/login/dologin')}" method="post">
         <div class="form-signin-heading text-center">
-            <h1 class="sign-title">Sign In</h1>
-            <img src="/static/app/admin/images/login-logo.png" alt=""/>
+            <h1 class="sign-title">美丽乡村后台管理系统</h1>
+            <img src="/static/app/index/images/123.jpg" alt="" width="250" height=""/>
         </div>
         <div class="login-wrap">
-            <input type="text" name="username" class="form-control" placeholder="User ID" autofocus>
-            <input type="password" name="pass" class="form-control" placeholder="Password">
+            <input type="text" name="username" class="form-control" placeholder="管理员" autofocus>
+            <input type="password" name="pass" class="form-control" placeholder="密码">
 
             <button class="btn btn-lg btn-login btn-block" type="submit">
                 <i class="fa fa-check"></i>
             </button>
 
-            <div class="registration">
-                Not a member yet?
-                <a class="" href="registration.html">
-                    Signup
-                </a>
-            </div>
-            <label class="checkbox">
-                <input type="checkbox" value="remember-me"> Remember me
-                <span class="pull-right">
-                    <a data-toggle="modal" href="#myModal"> Forgot Password?</a>
+            <!--<div class="registration">-->
+                <!--Not a member yet?-->
+                <!--<a class="" href="registration.html">-->
+                    <!--Signup-->
+                <!--</a>-->
+            <!--</div>-->
+            <!--<label class="checkbox">-->
+                <!--<input type="checkbox" value="remember-me"> Remember me-->
+                <!--<span class="pull-right">-->
+                    <!--<a data-toggle="modal" href="#myModal"> Forgot Password?</a>-->
 
-                </span>
-            </label>
+                <!--</span>-->
+            <!--</label>-->
 
         </div>
 
