--- a/application/admin/view/user/catepower.html
+++ b/application/admin/view/user/catepower.html
@@ -27,9 +27,9 @@
                             <a class="fa fa-times" href="javascript:;"></a>
                          </span>
 
-            <button onclick="ck(1)">全选</button>　
-            <button onclick="ck(2)">全取消</button>　
-            <button onclick="ck(3)">反选</button>　
+            <!--<button onclick="ck(1)">全选</button>　-->
+            <!--<button onclick="ck(2)">全取消</button>　-->
+            <!--<button onclick="ck(3)">反选</button>　-->
             <hr>
             <form action="{:url('admin/cate/nodeedit')}" method="post">
                 <!--<input type="hidden" name="_method" value="PUT">-->
@@ -107,21 +107,6 @@
 
 <!--common scripts for all pages-->
 <script src="/static/app/admin/js/scripts.js"></script>
-<script>
-    var check = document.getElementsByClassName('check');
-    function  ck(m) {
-        for (var i = 0; i < check.length; i++) {
-            switch(m){
-                case 1:check[i].checked=true;break;
-                case 2:check[i].checked=false;break;
-                case 3:check[i].checked=!check[i].checked;break;
-            }
 
-            console.log(i);
-            console.log(check[i]);
-
-        }
-    }
-</script>
 {/block}
 
