--- a/mobile/index/view/index/detail.html
+++ b/mobile/index/view/index/detail.html
@@ -129,7 +129,8 @@
                 if(data.status){
                     alert('加入成功');
                 }else{
-                    alert('加入失败');
+                    alert('请先登录');
+                    window.location='/showLogin';
                 }
             },
             error:function(){
