--- a/mobile/index/view/index/list.html
+++ b/mobile/index/view/index/list.html
@@ -47,7 +47,7 @@
 
                                 </div>
                                 <div class="am-u-sm-4 am-list-thumb">
-                                    <a href="###" class="">
+                                    <a href="{:url('/detail',['cid'=>$v.c_id,'gid'=>$v.id])}" class="">
                                         <img src="/uploads/{$v.pic}" class="pet_list_one_img" alt=""/>
                                     </a>
                                 </div>
@@ -58,12 +58,9 @@
                                 <div class="pet_article_user_block">
                                     <div class="pet_article_user_img">
                                         <div class="pet_article_user_shadow"></div>
-                                        <div class="pet_article_user_title">一周在任意地点工作三天？</div>
-                                        <img src="/static/mobile/img/c2.png" alt=""></div>
-                                    <div class="pet_article_user_info">
-                                        <div class="pet_article_user_info_ico"><img src="/static/mobile/img/c.png" alt=""></div>SeeYouAgain
-                                    </div>
-                                    <div class="am-list-item-text pet_article_user_nr">这是一家帮助客户在亚太地区找到适合的打折酒店的中介机构，在全球设立了9个办事处，老板克里斯蒂安·米施勒宣称要把它打造成世界上最棒的公司。</div>
+                                        <div class="pet_article_user_title">您的旅程已经开始.....</div>
+                                        <img src="/static/mobile/img/bottom.jpg" width="200"></div>
+                                    <div class="am-list-item-text pet_article_user_nr">五月的睢阳大地，嫩枝舒展，新叶舞动，到处弥漫着芬芳的清新空气，一切都是恰到好处，淋漓而不失柔美，热烈而不失婉约</div>
                                 </div>
                             </li>
 
@@ -76,7 +73,7 @@
 
         </div>
 
-        <div class="pet_article_footer_info">Copyright(c)2015 PetShow All Rights Reserved</div>
+        <div class="pet_article_footer_info">美丽乡村旅游</div>
     </div>
 </div>
 
