--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -41,7 +41,7 @@
     <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css"/> -->
     <link rel="stylesheet" type="text/css" href="/static/app/index/css/login_common.css">
     <link rel="stylesheet" type="text/css" href="/static/app/index/css/login_login.css">
-    <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+    <script src="/static/app/admin/js/jquery-1.10.2.min.js"></script>
     <script src="/static/app/index/js/gVerify.js"></script>
 
     <!--日期css-->
@@ -1047,13 +1047,13 @@
                                         <span>Aug</span>
                                     </div>
                                     <div class="gt_event_des">
-                                        <h4><a href="http://www.cntour2.com/viewnews/2017/08/21/7LZMeISTbksqvo43nK0N0.shtml">《湖北省红色旅游指南》出版发行 推荐37条红色旅游线路</a></h4>
+                                        <h4><a href=#">《湖北省红色旅游指南》出版发行 推荐37条红色旅游线路</a></h4>
                                         <ul class="gt_event_meta">
                                             <li><i class="fa fa-clock-o"></i> 2017-08-21 09:04:02</li>
                                             <li><i class="fa fa-location-arrow"></i>湖北</li>
                                         </ul>
                                         <p>由省委党史研究室和省旅游发展委员会编纂的《湖北省红色旅游指南》一书出版发行，精心为读者推出37条红色旅游线路。</p>
-                                        <a href="http://www.cntour2.com/viewnews/2017/08/21/7LZMeISTbksqvo43nK0N0.shtml">详细内容</a>
+                                        <a href="#">详细内容</a>
                                     </div>
                                 </li>
 
